feat: Support downloading binaries and tarballs from a mirror
Set download_artifact_mirror to a url to switch all downloads to
use that prefix instead of the default locations. All the files to
populate the mirror can be fetched and renamed correctly using
playbook download_binaries.yml

--- a/roles/download_artifact/defaults/main.yml
+++ b/roles/download_artifact/defaults/main.yml
@@ -28,6 +28,10 @@ download_artifact_http_proxy: "{{ http_proxy | default('') }}"
 download_artifact_https_proxy: "{{ https_proxy | default('') }}"
 download_artifact_no_proxy: "{{ no_proxy | default('') }}"
 
+# Can set a mirror url for fetching binaries and tarballs
+# download_artifact_mirror
+# download_artifact_mirror_version
+
 # NOTE(fitbeard): If this is false, debug information will be displayed but may
 #                 contain some private data, so it is recommended to set it to
 #                 true a production environment.
