--- a/roles/runc/meta/main.yml
+++ b/roles/runc/meta/main.yml
@@ -37,5 +37,6 @@ dependencies:
       download_artifact_url: "{{ runc_download_url }}"
       download_artifact_dest: "{{ runc_download_dest }}"
       download_artifact_checksum: "sha256:{{ runc_binary_checksum }}"
+      download_artifact_mirror_version: "{{ runc_version }}"
       download_artifact_owner: root
       download_artifact_mode: "0755"
