--- a/roles/download_artifact/tasks/main.yml
+++ b/roles/download_artifact/tasks/main.yml
@@ -16,9 +16,28 @@
   ansible.builtin.debug:
     msg: "{{ download_artifact_url }}"
 
+- name: Set source if not using mirror
+  set_fact:
+    source_url: "{{ download_artifact_url }}"
+
+- name: Set source if downloading from mirror via the work directory (filename on mirror same as filename in work dir)
+  when: ( download_artifact_mirror is defined ) and ( download_artifact_dest is not match('/usr/*') )
+  set_fact:
+    source_url: "{{ download_artifact_dest | regex_replace( download_artifact_work_directory, download_artifact_mirror ) }}"
+
+- name: Set source if downloading from mirror directly to executable location
+  when: ( download_artifact_mirror is defined ) and ( download_artifact_dest is match('/usr/*') )
+  set_fact:
+    source_url: "{{ download_artifact_mirror}}/{{ download_artifact_dest | split('/')[-1] }}-{{ download_artifact_mirror_version }}-{{ ansible_facts['system'] | lower }}-{{ download_artifact_goarch }}" # noqa: yaml[line-length]
+
+- name: Display url when using mirror
+  when: download_artifact_mirror is defined
+  ansible.builtin.debug:
+    msg: "Downloading from {{ source_url }}"
+
 - name: Download item
   ansible.builtin.get_url:
-    url: "{{ download_artifact_url }}"
+    url: "{{ source_url }}"
     dest: "{{ download_artifact_dest }}"
     owner: "{{ download_artifact_owner | default(omit) }}"
     mode: "{{ download_artifact_mode | default(omit) }}"
